--- a/classes/fighter/index.html
+++ b/classes/fighter/index.html
@@ -119,18 +119,18 @@
 <hr/>
 
 <h2>名稱</h2>
-<div id="names"><p  class="NoIndent"><b>矮人</b>: 歐茲魯克(Ozruk), Surtur, Brunhilda, Annika, Janos, Greta, Dim, Rundrig, 賈爾(Jarl), 索圖庫(Xotoq)</p>  
-<p class="NoIndent"><b>精靈</b>: Elohiir, Sharaseth, Hasrith, Shevaral, 凱杜斯(Cadeus), Eldar, Kithracet, 緹里恩(Thelian)</p>    
-<p class="NoIndent"><b>半身人</b>: Finnegan, Olive, Randolph, 巴特比(Bartleby), Aubrey, Baldwin, Becca</p> 
-<p class="NoIndent"><b>人類</b>: Hawke, Rudiger, 葛瑞格(Gregor), 布莉安娜(Brianne), Walton, Castor, Shanna, Ajax, Hob</p></div>
+<div id="names"><p  class="NoIndent"><b>矮人</b>: 歐茲魯克(Ozruk), 蘇爾特(Surtur), 布倫希爾德(Brunhilda), 安妮卡(Annika), 杰諾斯(Janos), 格蕾塔(Greta), 迪姆(Dim), 蘭德里革(Rundrig), 賈爾(Jarl), 索圖庫(Xotoq)</p>  
+<p class="NoIndent"><b>精靈</b>: 以羅欣(Elohiir), 莎拉瑟斯(Sharaseth), 哈茲里(Hasrith), 夏瓦羅(Shevaral), 凱杜斯(Cadeus), 艾爾達(Eldar), 奇斯瑞瑟(Kithracet), 緹里恩(Thelian)</p>    
+<p class="NoIndent"><b>半身人</b>: 芬尼根(Finnegan), 奧麗弗(Olive), 藍道夫(Randolph), 巴特比(Bartleby), 奧布里(Aubrey), 鮑德溫(Baldwin), 貝卡(Becca)</p> 
+<p class="NoIndent"><b>人類</b>: 霍克(Hawke), 呂迪格(Rudiger), 葛瑞格(Gregor), 布莉安娜(Brianne), 沃爾頓(Walton), 卡斯托(Castor), 莎娜(Shanna), 埃阿斯(Ajax), 哈伯(Hob)</p></div>
 <hr/>
 
 <h2>外觀</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
-<p class="NoIndent">Hard Eyes, Dead Eyes, or Eager Eyes</p>
-<p class="NoIndent">Wild Hair, Shorn Hair, or Battered Helm</p>
-<p class="NoIndent">Calloused Skin, Tanned Skin, or Scarred Skin</p>
-<p class="NoIndent">Built Body, Lithe Body, or Ravaged Body</p></div>
+<p class="NoIndent">堅毅的眼神, 死沉的眼神, 或 熱切的眼神</p>
+<p class="NoIndent">狂野的髮型, 剃短的髮型, 或 破舊頭盔</p>
+<p class="NoIndent">粗硬的肌膚，曬黑的肌膚，或 滿佈疤痕的肌膚</p>
+<p class="NoIndent">健壯的體型，輕盈的體型，或 經過摧殘的身軀</p></div>
 <hr/>
 
 <h2>屬性數值</h2>
@@ -141,61 +141,78 @@
 <h2>起始動作</h2>
 <div id="startingmoves"><p class="InstructionsAfterHeader">選擇一個種族並獲得相應的動作：</p>
 <div id="racialmoves"><div class="Move"><h3 class="MoveName">矮人</h3>
-<p class="NoIndent">When you <strong>share a drink with someone</strong>, you may parley with them using CON instead of CHA.</p></div>
+<p class="NoIndent">
+	當你<strong>與某人共享美酒</strong>時，你在與他談判時可以使用體質來取代魅力。</p></div>
 <div class="Move"><h3 class="MoveName">精靈</h3>
-<p class="NoIndent">Choose one weapon—you can always treat weapons of that type as if they had the precise tag.</p></div>
+<p class="NoIndent">
+	選擇一種武器──你永遠將該武器視為帶有<tag>靈巧</tag>標籤。</p></div>
 <div class="Move"><h3 class="MoveName">半身人</h3>
-<p class="NoIndent">When you defy danger and <strong>use your small size to your advantage</strong>, take +1.</p></div>
+<p class="NoIndent">
+	當你在進行面對危險動作時<strong>利用嬌小體型來取得優勢</strong>，你獲得 +1 加值。</p></div>
 <div class="Move"><h3 class="MoveName">人類</h3>
-<p class="NoIndent">Once per battle you may reroll a single damage roll (yours or someone else’s).</p></div></div>
+<p class="NoIndent">
+	每場戰鬥一次，你可以重骰一次你或其他人的傷害。</p></div></div>
+
 <div id="classmoves"><p class="Instructions">你起始還擁有以下動作：</p>
-<div class="Move"><h3 class="BasicMoveName">Bend Bars, Lift Gates</h3>
-<p class="NoIndent">When you <strong>use pure strength to destroy an inanimate obstacle</strong>, roll+Str. ✴On a 10+, choose 3. ✴On a 7-9 choose 2.</p>
-<ul><li>It doesn’t take a very long time</li>
-<li>Nothing of value is damaged</li>
-<li>It doesn’t make an inordinate amount of noise</li>
-<li>You can fix the thing again without a lot of effort</li></ul></div>
-<div class="Move"><h3 class="BasicMoveName">Armored</h3>
-<p class="NoIndent">You ignore the clumsy tag on armor you wear.</p></div>
-<div class="Move"><h3 class="BasicMoveName">Signature Weapon</h3>
-<p class="NoIndent">This is your weapon. There are many like it, but this one is yours. Your weapon is your best friend. It is your life. You master it as you master your life. Your weapon, without you, is useless. Without your weapon, you are useless. You must wield your weapon true.</p>
-<p>Choose a base description, all are 2 weight:</p>
-<ul><li class="Option">Sword</li>
-<li class="Option">Axe</li>
-<li class="Option">Hammer</li>
-<li class="Option">Spear</li>
-<li class="Option">Flail</li>
-<li class="Option">Fists</li></ul>
-<p class="NoIndent">Choose the range that best fits your weapon:</p>
-<ul><li class="Option">Hand</li>
-<li class="Option">Close</li>
-<li class="Option">Reach</li></ul>
-<p class="NoIndent">Choose two enhancements:</p>
-<ul><li class="Option">Hooks and spikes. +1 damage, but +1 weight.</li>
-<li class="Option">Sharp. +2 piercing.</li>
-<li class="Option">Perfectly weighted. Add precise.</li>
-<li class="Option">Serrated edges. +1 damage.</li>
-<li class="Option">Glows in the presence of one type of creature, your choice.</li>
-<li class="Option">Huge. Add messy and forceful.</li>
-<li class="Option">Versatile. Choose an additional range.</li>
-<li class="Option">Well-crafted. -1 weight.</li></ul>
-<p class="NoIndent">Choose a look:</p>
-<ul><li class="Option">Ancient</li>
-<li class="Option">Unblemished</li>
-<li class="Option">Ornate</li>
-<li class="Option">Blood-stained</li>
-<li class="Option">Sinister</li></ul></div></div></div>
+<div class="Move"><h3 class="BasicMoveName">彎柵破門 (Bend Bars, Lift Gates)</h3>
+<p class="NoIndent">
+	當你<strong>使用蠻力破壞無生命的障礙物</strong>時，擲+力量。<br/>
+	✴擲出10+時，選擇 3 項。<br/>
+	✴擲出7-9時，選擇 2 項。</p>
+<ul>
+	<li>這並不需要花費太長的時間</li>
+	<li>你沒有弄壞什麼有價值的東西</li>
+	<li>這沒有產生巨大的噪音</li>
+	<li>你不用花什麼功夫就能再把東西修好</li></ul></div>
+
+<div class="Move"><h3 class="BasicMoveName">著甲 (Armored)</h3>
+<p class="NoIndent">
+	你可以無視你所穿戴防具的<tag>笨重</tag>標籤。</p></div>
+
+<div class="Move"><h3 class="BasicMoveName">招牌武器 (Signature Weapon)</h3>
+<p class="NoIndent">
+	這是一把屬於你的武器。儘管有許多武器和它相像，但這一把專屬於你。你的武器是你最忠實的朋友。它是你的生命。你掌握它，就如同你掌握自己的人生。沒有你，你的武器就毫無用處；而沒有你的武器，你也將毫無用處。你必須正確地使用你的武器。</p>
+<p>選擇一項基礎描述，它們全都是 <tag>2 重量</tag>：</p>
+<ul>
+	<li class="Option">劍</li>
+	<li class="Option">斧</li>
+	<li class="Option">鎚</li>
+	<li class="Option">矛</li>
+	<li class="Option">連枷</li>
+	<li class="Option">拳頭</li></ul>
+<p class="NoIndent">選擇最符合你武器的作用範圍：</p>
+<ul>
+	<li class="Option"><tag class="red">觸及</tag></li>
+	<li class="Option"><tag class="red">近身</tag></li>
+	<li class="Option"><tag class="red">及遠</tag></li></ul>
+<p class="NoIndent">選擇二項強化效果：</p>
+<ul>
+	<li class="Option">彎鉤和尖刺。 <tag>+1 傷害</tag>，但<tag>+1 重量</tag>。</li>
+	<li class="Option">鋒利。 <tag>+2 穿透</tag>。</li>
+	<li class="Option">完美配重。 添加<tag>靈巧</tag>標籤。</li>
+	<li class="Option">鋸齒鋒刃。 <tag>+1 傷害</tag>。</li>
+	<li class="Option">會在某一種類型的生物出現時發光，生物類型由你決定。</li>
+	<li class="Option">巨大。 添加<tag>毀亂</tag>和<tag>強力</tag>標籤。</li>
+	<li class="Option">多功能。 選擇一個額外的作用範圍標籤。</li>
+	<li class="Option">製作精良。 <tag>-1 重量</tag>。</li></ul>
+<p class="NoIndent">選擇一項外觀：</p>
+<ul>
+	<li class="Option">古老</li>
+	<li class="Option">完美無瑕</li>
+	<li class="Option">裝飾華麗</li>
+	<li class="Option">染血</li>
+	<li class="Option">不祥的</li></ul></div></div></div>
 <hr/>
 
 
 <h2>陣營</h2>
 <p class="InstructionsAfterHeader">選擇一個陣營：</p>
 <div id="alignment"><div class="Move"><h3 class="MoveName">善良</h3>
-<p class="NoIndent">Defend those weaker than you.</p></div>
+<p class="NoIndent">守護那些比你弱小的人們。</p></div>
 <div class="Move"><h3 class="MoveName">中立</h3>
-<p class="NoIndent">Defeat a worthy opponent.</p></div>
+<p class="NoIndent">擊敗值得一戰的對手。</p></div>
 <div class="Move"><h3 class="MoveName">邪惡</h3>
-<p class="NoIndent">Kill a defenseless or surrendered enemy.</p></div></div>
+<p class="NoIndent">殺死手無寸鐵者或投降的敵人。</p></div></div>
 <hr/>
 
 
@@ -218,58 +235,106 @@
 
 <h2>羈絆</h2>
 <div id="bonds"><p class="NoIndent">在至少一個欄位中填入你其中一名同伴的名字：</p>
-<p>_______________ owes me their life, whether they admit it or not.</p>
-<p>I have sworn to protect _______________.</p>
-<p>I worry about the ability of _______________ to survive in the dungeon.</p>
-<p>_______________ is soft, but I will make them hard like me.</p></div>
+<p>不論 _______________ 是否承認，他都欠我一條命。</p>
+<p>我發過誓要保護 _______________。</p>
+<p>我擔憂 _______________ 在地城中生存下來的能力。</p>
+<p>_______________ 相當柔弱，但我會讓他們像我一樣堅強。</p></div>
 <hr/>
 <h2>進階動作</h2>
 <div id="moves"><p class="InstructionsAfterHeader">當你的等級升至2~5，從下列動作中選擇：</p>
-<div class="Move"><h3 class="MoveName">Merciless</h3>
-<p class="NoIndent">When you deal damage, deal +1d4 damage.</p></div>
-<div class="Move"><h3 class="MoveName">Heirloom</h3>
-<p class="NoIndent">When you <strong>consult the spirits that reside within your signature weapon</strong>, they will give you an insight relating to the current situation, and might ask you some questions in return, roll+CHA. ✴On a 10+, the GM will give you good detail. ✴On a 7-9, the GM will give you an impression.</p></div>
-<div class="Move"><h3 class="MoveName">Armor Mastery</h3>
-<p class="NoIndent">When you <strong>make your armor take the brunt of damage dealt to you</strong>, the damage is negated but you must reduce the armor value of your armor or shield (your choice) by 1. The value is reduced each time you make this choice. If the reduction leaves the item with 0 armor it is destroyed.</p></div>
-<div class="Move"><h3 class="MoveName">Improved Weapon</h3>
-<p class="NoIndent">Choose one extra enhancement for your signature weapon.</p></div>
-<div class="Move"><h3 class="MoveName">Seeing Red</h3>
-<p class="NoIndent">When you discern realities during combat, you take +1.</p></div>
-<div class="Move"><h3 class="MoveName">Interrogator</h3>
-<p class="NoIndent">When you <strong>parley using threats of impending violence as leverage</strong>, you may use STR instead of CHA.</p></div>
-<div class="Move"><h3 class="MoveName">Scent of Blood</h3>
-<p class="NoIndent">When you hack and slash an enemy, your next attack against that same foe deals +1d4 damage.</p></div>
-<div class="Move"><h3 class="MoveName">Multiclass Dabbler</h3>
-<p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p></div>
-<div class="Move"><h3 class="MoveName">Iron Hide</h3>
-<p class="NoIndent">You gain +1 armor.</p></div>
-<div class="Move"><h3 class="MoveName">Blacksmith</h3>
-<p class="NoIndent">When you have access to a forge you can graft the magical powers of a weapon onto your signature weapon. This process destroys the magical weapon. Your signature weapon gains the magical powers of the destroyed weapon.</p></div>
+<div class="Move"><h3 class="MoveName">殘忍無情 (Merciless)</h3>
+<p class="NoIndent">當你造成傷害時，你額外造成 +1d4 傷害。</p></div>
+
+<div class="Move"><h3 class="MoveName">傳家之寶 (Heirloom)</h3>
+<p class="NoIndent">
+	當你<strong>請教寄宿在你招牌武器內的精魂</strong>時，它們將給你一個與當前情境的見解，並可能會反過來問你一些問題，擲+魅力。<br/>
+	✴擲出10+時，GM會告訴你詳細的細節。<br/>
+	✴擲出7-9時，GM只會告訴你一個大致的印象。</p></div>
+
+<div class="Move"><h3 class="MoveName">護甲精通 (Armor Mastery)</h3>
+<p class="NoIndent">
+	當你<strong>決定利用你的護甲代為承受對你造成的衝擊傷害</strong>時，該傷害將被抵銷，但你必須同時將你盔甲或盾牌（由你決定）的護甲值減少1點。其護甲值將在你每次做出這個決定時減少。若這個減損值導致該物品的護甲值歸零，則該物品被摧毀。</p></div>
+
+<div class="Move"><h3 class="MoveName">強化武器 (Improved Weapon)</h3>
+<p class="NoIndent">
+	為你的招牌武器額外選擇一項強化效果。</p></div>
+
+<div class="Move"><h3 class="MoveName">酣戰眼紅 (Seeing Red)</h3>
+<p class="NoIndent">
+	當你在戰鬥期間進行審視現狀動作時，你獲得 +1 加值。</p></div>
+
+<div class="Move"><h3 class="MoveName">審問者 (Interrogator)</h3>
+<p class="NoIndent">
+	當你<strong>使用暴力威脅做為籌碼來進行談判</strong>時，你可以使用力量來取代魅力。</p></div>
+
+<div class="Move"><h3 class="MoveName">嗅聞血腥 (Scent of Blood)</h3>
+<p class="NoIndent">
+	當你對一個敵人進行砍劈動作時，你下一次對同個敵人進行的攻擊將額外造成 +1d4 傷害。</p></div>
+
+<div class="Move"><h3 class="MoveName">兼職新手 (Multiclass Dabbler)</h3>
+<p class="NoIndent">
+	從另一個職業中獲得一個動作。 在選擇動作時，將你的等級視為比原本低一級。</p></div>
+
+<div class="Move"><h3 class="MoveName">鐵革硬皮 (Iron Hide)</h3>
+<p class="NoIndent">
+	你獲得 +1 護甲值。</p></div>
+
+<div class="Move"><h3 class="MoveName">鐵匠 (Blacksmith)</h3>
+<p class="NoIndent">
+	當你有機會使用鍛造廠時，你可以將一把武器的魔法力量移植到你的招牌武器上。這個過程將會摧毀那把魔法武器。你的招牌武器將會因此獲得被摧毀武器中原本蘊含的魔法力量。</p></div>
+
+
 <p class="Instructions">當你的等級升至6~10，從下列動作或等級2~5的動作中選擇：</p>
-<div class="Move"><h3 class="MoveName">Bloodthirsty</h3>
-<p class="Requirement">Replaces: Merciless</p>
-<p class="NoIndent">When you deal damage, deal +1d8 damage.</p></div>
-<div class="Move"><h3 class="MoveName">Armored Perfection</h3>
-<p class="Requirement">Replaces: Armor Mastery</p>
-<p class="NoIndent">When you <strong>choose to let your armor take the brunt of damage dealt to you</strong>, the damage is negated and you take +1 forward against the attacker, but you must reduce the armor value of your armor or shield (your choice) by 1. The value is reduced each time you make this choice. If the reduction leaves the item with 0 armor it is destroyed.</p></div>
-<div class="Move"><h3 class="MoveName">Evil Eye</h3>
-<p class="Requirement">Requires: Seeing Red</p>
-<p class="NoIndent">When you <strong>enter combat</strong>, roll+CHA. ✴On a 10+, hold 2. ✴On a 7-9, hold 1. Spend your hold to make eye contact with an NPC present, who freezes or flinches and can’t act until you break it off. ✴On a 6-, your enemies immediately identify you as their biggest threat.</p></div>
-<div class="Move"><h3 class="MoveName">Taste of Blood</h3>
-<p class="Requirement">Replaces: Scent of Blood</p>
-<p class="NoIndent">When you hack and slash an enemy, your next attack against that same foe deals +1d8 damage.</p></div>
-<div class="Move"><h3 class="MoveName">Multiclass Initiate</h3>
-<p class="Requirement">Requires: Multiclass Dabbler</p>
-<p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p></div>
-<div class="Move"><h3 class="MoveName">Steel Hide</h3>
-<p class="Requirement">Replaces: Iron Hide</p>
-<p class="NoIndent">You gain +2 armor.</p></div>
-<div class="Move"><h3 class="MoveName">Through Death’s Eyes</h3>
-<p class="NoIndent">When you <strong>go into battle</strong>, roll+WIS. ✴On a 10+, name someone who will live <strong>and</strong> someone who will die. ✴On a 7-9, name someone who will live <strong>or</strong> someone who will die. Name NPCs, not player characters. The GM will make your vision come true, if it’s even remotely possible. ✴On a 6- you see your own death and consequently take -1 ongoing throughout the battle.</p></div>
-<div class="Move"><h3 class="MoveName">Eye for Weaponry</h3>
-<p class="NoIndent">When you look over an enemy’s weaponry, ask the GM how much damage they do.</p></div>
-<div class="Move"><h3 class="MoveName">Superior Warrior</h3>
-<p class="NoIndent">When you hack and slash on a 12+ you deal your damage, avoid their attack, and impress, dismay, or frighten your enemy.</p></div></div>
+<div class="Move"><h3 class="MoveName">殘酷嗜血 (Bloodthirsty)</h3>
+<p class="Requirement">取代: 殘忍無情</p>
+<p class="NoIndent">當你造成傷害時，你額外造成 +1d8 傷害。</p></div>
+
+<div class="Move"><h3 class="MoveName">完美著甲 (Armored Perfection)</h3>
+<p class="Requirement">取代: 護甲精通</p>
+<p class="NoIndent">
+	當你<strong>決定利用你的護甲代為承受對你造成的衝擊傷害</strong>時，該傷害將被抵銷，且你獲得對該攻擊者的下次+1。但你必須同時將你盔甲或盾牌（由你決定）的護甲值減少1點。其護甲值將在你每次做出這個決定時減少。若這個減損值導致該物品的護甲值歸零，則該物品被摧毀。</p></div>
+
+<div class="Move"><h3 class="MoveName">邪眼 (Evil Eye)</h3>
+<p class="Requirement">需求: 酣戰眼紅</p>
+<p class="NoIndent">
+	當你<strong>投身戰鬥</strong>時，擲+魅力。<br/>
+	✴擲出10+時，獲得 2掌握。<br/>
+	✴擲出7-9時，獲得 1掌握。<br/>
+	消耗你的掌握來與一位在場的NPC進行眼神接觸，他將因此僵直或退縮，且直到你中斷眼神接觸之前都無法行動。</p>
+<p class="NoIndent">
+	✴擲出6-時，你的敵人將立刻將你視作戰場上最大的威脅。</p></div>
+
+<div class="Move"><h3 class="MoveName">品嘗鮮血 (Taste of Blood)</h3>
+<p class="Requirement">取代: 嗅聞血腥</p>
+<p class="NoIndent">
+	當你對一個敵人進行砍劈動作時，你下一次對同個敵人進行的攻擊將額外造成 +1d8 傷害。</p></div>
+
+<div class="Move"><h3 class="MoveName">兼職學徒 (Multiclass Initiate)</h3>
+<p class="Requirement">需求: 兼職新手</p>
+<p class="NoIndent">
+	從另一個職業中獲得一個動作。 在選擇動作時，將你的等級視為比原本低一級。</p></div>
+
+<div class="Move"><h3 class="MoveName">鋼筋鐵骨 (Steel Hide)</h3>
+<p class="Requirement">取代: 鐵革硬皮</p>
+<p class="NoIndent">
+	你獲得 +2 護甲值。</p></div>
+
+<div class="Move"><h3 class="MoveName">死神之眼 (Through Death’s Eyes)</h3>
+<p class="NoIndent">
+	當你<strong>投身戰鬥</strong>時，擲+睿知。<br/>
+	✴擲出10+時，指名一個將會活下來的人，<strong>並</strong>指名一個將會死去的人。<br/>
+	✴擲出7-9時，指名一個將會活下來的人，<strong>或</strong>指名一個將會死去的人。<br/>
+	指名NPC，而非玩家角色。哪怕只有些微的可能性，GM也會使你的預見的未來景象成真。</p>
+<p class="NoIndent">
+	✴擲出6-時，你看見了你自己的死亡，並因此在這場戰鬥期間獲得持續-1。</p></div>
+
+<div class="Move"><h3 class="MoveName">武器鑑識 (Eye for Weaponry)</h3>
+<p class="NoIndent">
+	當你看向敵人的武器時，向GM詢問它能夠造成多少傷害。</p></div>
+
+<div class="Move"><h3 class="MoveName">卓越勇士 (Superior Warrior)</h3>
+<p class="NoIndent">
+	當你在砍劈動作中擲出12+的結果時，你造成你的傷害、避開敵人的攻擊，並讓你的敵人敢到驚艷、挫敗、或恐懼。</p></div></div>
 
           </div>
        </div>
