--- a/classes/wizard/index.html
+++ b/classes/wizard/index.html
@@ -118,28 +118,29 @@
 <p>Let them cast their sidelong glances. Let them call you “warlock” or “diabolist.” Who among them can hurl fireballs from their eyes?</p>
 <p>Yeah. We didn’t think so.</p></div>
 <hr/>
-<h2>名稱 (Names)</h2>
-<div id="names"><p class="NoIndent"><em>Elf</em>: Galadiir, 芬法里爾(Fenfaril), Lilliastre, Phirosalle, Enkirash, Halwyr</p> 
-<p class="NoIndent"><em>Human</em>: 亞文(Avon), Morgan, 拉瑟(Rath), Ysolde, Ovid, 維特(Vitus), Aldara, Xeno, Uri</p></div>
+<h2>名稱</h2>
+<div id="names"><p class="NoIndent"><b>精靈</b>: Galadiir, 芬法里爾(Fenfaril), Lilliastre, Phirosalle, Enkirash, Halwyr</p> 
+<p class="NoIndent"><b>人類</b>: 亞文(Avon), Morgan, 拉瑟(Rath), Ysolde, Ovid, 維特(Vitus), Aldara, Xeno, Uri</p></div>
 <hr/>
-<h2>外觀 (Look)</h2>
+<h2>外觀</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
 <p class="NoIndent">Haunted Eyes, Sharp Eyes, or Crazy Eyes</p>
 <p class="NoIndent">Styled Hair, Wild Hair, or Pointed Hat</p>
 <p class="NoIndent">Worn Robes, Stylish Robes, or Strange Robes</p>
 <p class="NoIndent">Pudgy Body, Creepy Body, or Thin Body</p></div>
 <hr/>
-<h2>屬性數值 (Stats)</h2>
-<p class="NoIndent">Your maximum HP is 4+Constitution.</p>
-<p class="NoIndent">Your base damage is <span id="Damage">d4</span>.</p>
+<h2>屬性數值</h2>
+<p class="NoIndent">你的最大生命值為 4+體質值。</p>
+<p class="NoIndent">你的基礎傷害骰為 <span id="Damage">d4</span>。</p>
 <hr/>
-<h2>起始動作 (Starting Moves)</h2>
-<div id="startingmoves"><p class="InstructionsAfterHeader">Choose a race and gain the corresponding move:</p>
-<div id="racialmoves"><div class="Move"><h3 class="MoveName">Elf</h3>
+<h2>起始動作</h2>
+<div id="startingmoves"><p class="InstructionsAfterHeader">選擇一個種族並獲得相應的動作：</p>
+<div id="racialmoves"><div class="Move"><h3 class="MoveName">精靈</h3>
 <p class="NoIndent">Magic is as natural as breath to you. Detect Magic is a cantrip for you.</p></div>
-<div class="Move"><h3 class="MoveName">Human</h3>
+<div class="Move"><h3 class="MoveName">人類</h3>
 <p class="NoIndent">Choose one cleric spell. You can cast it as if it was a wizard spell.</p></div></div>
-<div id="classmoves"><p class="Instructions">You start with these moves:</p>
+
+<div id="classmoves"><p class="Instructions">你起始還擁有以下動作：</p>
 <div class="Move"><h3 class="BasicMoveName">法術書 (Spellbook)</h3>
 <p class="NoIndent">You have mastered several spells and inscribed them in your spellbook. You start out with three first level spells in your spellbook as well as the cantrips. Whenever you gain a level, you add a new spell of your level or lower to your spellbook. You spellbook is 1 weight.</p></div>
 <div class="Move"><h3 class="BasicMoveName">準備法術 (Prepare Spells)</h3>
@@ -153,9 +154,9 @@
 <li>The spell disturbs the fabric of reality as it is cast—take -1 ongoing to cast a spell until the next time you Prepare Spells.</li>
 <li>After it is cast, the spell is forgotten. You cannot cast the spell again until you prepare spells.</li></ul>
 <p class="NoIndent">Note that maintaining spells with ongoing effects will sometimes cause a penalty to your roll to cast a spell.</p></div>
-<div class="Move"><h3 class="BasicMoveName">Spell Defense</h3>
+<div class="Move"><h3 class="BasicMoveName">法術防禦 (Spell Defense)</h3>
 <p class="NoIndent">You may end any ongoing spell immediately and use the energy of its dissipation to deflect an oncoming attack. The spell ends and you subtract its level from the damage done to you.</p></div>
-<div class="Move"><h3 class="BasicMoveName">Ritual</h3>
+<div class="Move"><h3 class="BasicMoveName">儀式 (Ritual)</h3>
 <p class="NoIndent">When you <strong>draw on a place of power to create a magical effect</strong>, tell the GM what you’re trying to achieve. Ritual effects are always possible, but the GM will give you one to four of the following conditions:</p>
 <ul><li>It’s going to take days/weeks/months</li>
 <li>First you must ____</li>
@@ -165,36 +166,48 @@
 <li>You and your allies will risk danger from ____</li>
 <li>You’ll have to disenchant ____ to do it</li></ul></div></div></div>
 <hr/>
-<h2>陣營 (Alignment)</h2>
-<p class="InstructionsAfterHeader">Choose an alignment:</p>
-<div id="alignment"><div class="Move"><h3 class="MoveName">Good</h3>
-<p class="NoIndent">Use magic to directly aid another.</p></div>
-<div class="Move"><h3 class="MoveName">Neutral</h3>
-<p class="NoIndent">Discover something about a magical mystery.</p></div>
-<div class="Move"><h3 class="MoveName">Evil</h3>
-<p class="NoIndent">Use magic to cause terror and fear.</p></div></div>
+
+<h2>陣營</h2>
+<p class="InstructionsAfterHeader">選擇一個陣營：</p>
+<div id="alignment"><div class="Move"><h3 class="MoveName">善良</h3>
+<p class="NoIndent">使用魔法來直接幫助他人。</p></div>
+<div class="Move"><h3 class="MoveName">中立</h3>
+<p class="NoIndent">發掘某個與魔法奧秘有關的事物。</p></div>
+<div class="Move"><h3 class="MoveName">邪惡</h3>
+<p class="NoIndent">使用魔法來散佈恐怖與畏懼。</p></div></div>
 <hr/>
-<h2>裝備 (Gear)</h2>
-<div id="gear"><p class="NoIndent">Your load is 7+Str. You start with your spellbook (1 weight) and dungeon rations (5 uses, 1 weight). Choose your defenses:</p>
-<ul><li class="Option">Leather armor (1 armor, 1 weight)</li>
-<li class="Option">Bag of books (5 uses, 2 weight) and 3 healing potions</li></ul>
-<p class="NoIndent">Choose your weapon:</p>
-<ul><li class="Option">Dagger (hand, 1 weight)</li>
-<li class="Option">Staff (close, two-handed, 1 weight)</li></ul>
-<p class="NoIndent">Choose one:</p>
-<ul><li class="Option">Healing potion (0 weight)</li>
-<li class="Option">3 antitoxins (0 weight)</li></ul></div>
+
+<h2>裝備</h2>
+<div id="gear"><p class="NoIndent">
+	你的負載上限為 7+力量。<br/>
+	你起始擁有 你的法術書(<tag>1 重量</tag>) 和 地城口糧 (<tag>5 使用次數</tag> <tag>1 重量</tag>)。</p>
+選擇你的防具：
+<ul>
+	<li class="Option">皮甲 (<span class="Tags">1 護甲, 1 重量</span>)</li>
+	<li class="Option">一袋書 (<span class="Tags">5 使用次數, 2 重量</span>) 和 3 治療藥水</li></ul>
+選擇你的武器：
+<ul>
+	<li class="Option">匕首 (<span class="Tags">觸及, 1 重量</span>)</li>
+	<li class="Option">法杖 (<span class="Tags">近身, 雙手, 1 重量</span>)</li></ul>
+選擇一項：
+<ul>
+	<li class="Option">治療藥水 (<span class="Tags">0 重量</span>)</li>
+	<li class="Option">3 解毒劑 (<span class="Tags">0 重量</span>)</li></ul></div>
 <hr/>
-<h2>羈絆 (Bonds)</h2>
+
+<h2>羈絆</h2>
 <div id="bonds"><p class="NoIndent">在至少一個欄位中填入你其中一名同伴的名字：</p>
 <p>_______________ will play an important role in the events to come. I have foreseen it!</p>
 <p>_______________ is keeping an important secret from me.</p>
 <p>_______________ is woefully misinformed about the world; I will teach them all that I can.</p></div>
 <hr/>
-<h2>進階動作 (Advanced Moves)</h2>
-<div id="moves"><p class="InstructionsAfterHeader">When you gain a level from 2-5, choose from these moves. You also add a new spell to your spellbook at each level.</p>
-<div class="Move"><h3 class="MoveName">Prodigy</h3>
-<p class="NoIndent">Choose a spell. You prepare that spell as if it were one level lower.</p></div>
+
+<h2>進階動作</h2>
+<div id="moves"><p class="InstructionsAfterHeader">當你的等級升至2~5，從下列動作中選擇。你同時在每次升級時將一個新的法術加到你的法術書中。</p>
+<div class="Move"><h3 class="MoveName">奇才 (Prodigy)</h3>
+<p class="NoIndent">
+	選擇一個法術。當你準備該法術時，將該法術的等級視作比原本低一級。</p></div>
+
 <div class="Move"><h3 class="MoveName">Empowered Magic</h3>
 <p class="NoIndent">When you cast a spell, on a 10+ you have the option of choosing from the 7-9 list. If you do, you may choose one of these as well:</p>
 <ul><li>The spell’s effects are maximized</li>
@@ -215,10 +228,13 @@
 <p class="NoIndent">When you <strong>attempt to counter an arcane spell that will otherwise affect you</strong>, stake one of your prepared spells on the defense and roll+Int. ✴On a 10+, the spell is countered and has no effect on you. ✴On a 7-9, the spell is countered and you forget the spell you staked. Your counterspell protects only you; if the countered spell has other targets they get its effects.</p></div>
 <div class="Move"><h3 class="MoveName">Quick Study</h3>
 <p class="NoIndent">When you <strong>see the effects of an arcane spell</strong>, ask the GM the name of the spell and its effects. You take +1 when acting on the answers.</p></div>
-<p class="Instructions">When you gain a level from 6-10, choose from these moves or the level 2-5 moves.</p>
-<div class="Move"><h3 class="MoveName">Master</h3>
-<p class="Requirement">Requires: Prodigy</p>
-<p class="NoIndent">Choose one spell in addition to the one you picked for prodigy. You prepare that spell as if it were one level lower.</p></div>
+
+<p class="Instructions">當你的等級升至6~10，從下列動作或等級2~5的動作中選擇：</p>
+<div class="Move"><h3 class="MoveName">宗師 (Master)</h3>
+<p class="Requirement">需求: 奇才</p>
+<p class="NoIndent">
+	選擇一個法術（不能是你在奇才中所選的法術）。當你準備該法術時，將該法術的等級視作比原本低一級。</p></div>
+
 <div class="Move"><h3 class="MoveName">Greater Empowered Magic</h3>
 <p class="Requirement">Replaces: Empowered Magic</p>
 <p class="NoIndent">When you cast a spell, on a 10-11 you have the option of choosing from the 7-9 list. If you do, you may choose one of these effects as well. On a 12+ you get to choose one of these effects for free:</p>
